# make_slice

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: docs.yml  gh-pages.yml  publish.yml  ruff.yml  test.yml
about/: index.html
api/: index.html
docs/: api.md  index.md
docs/reports/: .gitignore
make_slice/: __init__.py
reports/: coverage.xml  pytest.html  pytest.xml
reports/coverage/: class_index.html  function_index.html  index.html  status.json  z_9c5583fb5fb5d3d5___init___py.html
search/: search_index.json
tests/: __init__.py  test_make_slice.py
