[tool.poetry]
name = "make-slice"
version = "0.1.6"
description = "Creates slice objects with clean syntax."
authors = ["pl <0x00.pl@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "make_slice" }]

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
coverage = "^7.8.2"
twine = "^6.1.0"
tox = "^4.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
